# taskmaster

./: .gitignore  README.md  go.mod  kill_process.bat  services.conf
cli/: Makefile  taskmastercli
cli/includes/: global.hpp
cli/srcs/: main.cpp
ctl/: CMakeLists.txt  Makefile  taskmasterctl
ctl/configs/: commands.json
ctl/includes/: JsonObject.hpp  JsonReader.hpp  TunnelTCP.hpp  global.hpp  json.hpp
ctl/srcs/: JsonObject.cpp  JsonReader.cpp  TunnelTCP.cpp  json.cpp  main.cpp  utils.cpp
daemon/: CMakeLists.txt  Makefile  taskmasterdaemon
daemon/includes/: Execution.hpp  Service.hpp  ServiceManager.h  ServiceManager.hpp  TunnelTCP.hpp  global.hpp
daemon/srcs/: Execution.cpp  Service.cpp  ServiceManager.cpp  TunnelTCP.cpp  main.cpp
srcs/: logger.go  main.go  parser.go  utils.go
srcs/cli/: main.go
srcs/cli/core/: commands.go  init.go  parser_arguments.go
srcs/common/: logger.go  parser.go  utils.go
srcs/daemon/: main.cpp  taskmaster
