CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

PROJECT(taskmaster_ctl C CXX)

INCLUDE_DIRECTORIES(./includes)
file(GLOB SRCS "./srcs/*.cpp")

ADD_EXECUTABLE(taskmaster_ctl ${SRCS} includes/JsonReader.hpp srcs/JsonReader.cpp)