CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(taskmaster_daemon C CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -fsanitize=address -g3 -std=20")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(THREADS_PREFER_PTHREAD_FLAG ON)
SET(CMAKE_CXX_STANDARD 20)

FIND_PACKAGE(Threads REQUIRED)

INCLUDE_DIRECTORIES(./includes)
FILE(GLOB SRCS "./srcs/*.cpp")

ADD_EXECUTABLE(taskmaster_daemon ${SRCS} srcs/TunnelTCP.cpp includes/TunnelTCP.hpp)
TARGET_LINK_LIBRARIES(taskmaster_daemon PRIVATE Threads::Threads)
